--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </header>
 
 <!-- Main -->
-        <main>
+<main class="main">
             <!-- Section Research & Filters -->
-            <section class="search-and-filters">
+    <section class="search-and-filters">
 
                 <!-- Zone Titre + Paragraphe -->
     <div class="search-header">
@@ -39,7 +39,7 @@
         <p>En plein centre-ville ou en pleine nature</p>
     </div>
 
-                <!-- Zone de recherche -->
+                <!-- Zone Research -->
                 <div class="search-bar">
                     <div class="search-icon">
                         <i class="fa-solid fa-location-dot"></i>
@@ -51,12 +51,43 @@
                         <button type="button" class="search-btn">Rechercher</button>
                     </div>
                 </div>
-
-             </section>
+                
+                <!-- Filters -->
+                <div class="filters">
+                    <h3>Filtres</h3>  
+                    <div class="filters-button">
+                        <button class="button">
+                            <i class="fa-solid fa-money-bill-wave" style="font-size: 22px;"></i>
+                        <span>Économique</span>
+                        </button>
+                        <button class="button">
+                            <i class="fa-solid fa-person" style="font-size: 22px;"></i>
+                        <span>Familial</span>
+                        </button>
+                        <button class="button">
+                            <i class="fa-solid fa-solid fa-heart" style="font-size: 22px;"></i>
+                        <span>Romantique</span>
+                        </button>
+                        <button class="button">
+                            <i class="fa-solid fa-fire" style="font-size: 22px;"></i>
+                        <span>Nos pépites</span>
+                        </button>
+                    </div>
+                </div>  
+                <div class="information">
+                    <div class="icon-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <circle cx="12" cy="12" r="11.5" stroke="#D9D9D9"/>
+                            <path d="M13.3333 15.6829H12.6667V11.0074C12.6667 10.6381 12.3681 10.3395 12 10.3395H10.6667C10.2985 10.3395 10 10.6381 10 11.0074C10 11.3766 10.2985 11.6565 10.6667 11.6565H11.3333V15.6641H10.6667C10.2985 15.6641 10 15.9628 10 16.3321C10 16.7013 10.2985 17 10.6667 17H13.3333C13.7015 17 14 16.7013 14 16.3321C14 15.9628 13.7021 15.6829 13.3333 15.6829ZM12 9.00359C12.5523 9.00359 13 8.55503 13 8.00169C13 7.44835 12.5521 7 12 7C11.4479 7 11 7.44856 11 8.0019C11 8.55524 11.4477 9.00359 12 9.00359Z" fill="#0065FC"/>
+                          </svg>
+                      </div>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+</section>
             <!-- Section 2 Hebergements et Populaires -->
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                    <h2>Hébergements à Marseille</h2>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
