Ajout de la structure et du style pour le footer avec 3 sections, la section Activités à Marseille et Footer

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 <section class="hebergements">
                     <h2>Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
+
                         <!-- Rangée cards 1 -->
-                        <div class="hebergements-cards-rangee">
-                        <a href="#">
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel du Port">
+                                <img  class="hebergements-cards img"  src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel du Port">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Hôtel du Port</h3>
@@ -112,9 +112,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel chez Amina">
+                                <img class="hebergements-cards img" src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel chez Amina">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Hôtel chez Amina</h3>
@@ -131,9 +131,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel les Mouettes">
+                                <img class="hebergements-cards img" src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel les Mouettes">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Hôtel Les Mouettes</h3>
@@ -150,13 +150,10 @@
                                 </div>
                             </article>
                         </a>
-                    </div>
-
-                    <!-- Rangée cards 2 -->
-                    <div class="hebergements-cards-rangee">
-                        <a href="#">
+                    
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel de la Mer">
+                                <img class="hebergements-cards img" src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel de la Mer">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Hôtel de la Mer</h3>
@@ -173,9 +170,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'auberge la Canabière">
+                                <img class="hebergements-cards img" src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'auberge la Canabière">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Auberge la Canabière</h3>
@@ -192,9 +189,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a class="a-hebergements" href="#">
                             <article class="card">
-                                <img src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'auberge le Panier">
+                                <img class="hebergements-cards img" src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'auberge le Panier">
                                 <div class="hebergements-cards-content">
                                     <div class="hebergements-card-txt">
                                         <h3 class="card-title">Auberge le Panier</h3>
@@ -211,10 +208,10 @@
                                 </div>
                             </article>
                         </a>
-                      </div>
                     </div>
                     <span class="afficher-plus">Afficher plus</span>
                 </section>
+           
 
                 <!-- Section Populaires -->
                 <section class="populaires">
@@ -283,8 +280,70 @@
                     </div>
                 </section>
             </div>
+
+             <!-- Section Activités -->
+              <section class="activities-section">
+                <h2>Activités à Marseille</h2>
+                <div class="activities-card-content">
+                    <a class="a-activities" href="#">
+                        <figure class="card activities-card">
+                            <img class="activities-img" src="images/activites/reno-laithienne.jpg" alt="Photo de l'activité Vieux-Port">
+                            <h3>Vieux-port</h3>
+                        </figure>
+                    </a>
+                    <a class="a-activities" href="#">
+                        <figure class="card activities-card">
+                            <img class="activities-img" src="images/activites/paul-hermann.jpg" alt="Photo de l'activité Fort de Pomègues">
+                            <h3>Fort de Pomègues</h3>
+                        </figure>
+                    </a>
+                    <a class="a-activities" href="#">
+                        <figure class="card activities-card">
+                            <img class="activities-img" src="images/activites/kilyan-sockalingum.jpg" alt="Photo de l'activité Parc national des Calanques">
+                            <h3>Parc national des Calanques</h3>
+                        </figure>
+                    </a>
+                    <a class="a-activities" href="#">
+                        <figure class="card activities-card">
+                            <img class="activities-img" src="images/activites/florian-wehde.jpg" alt="Photo de l'activité Notre-Dame-de-la-Garde">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </figure>
+                    </a>
+
+                </div>
+
+            </section>
         </main>
-        <footer></footer>
+        <footer class="footer">
+            <div class="footer-section">
+                <h3>À propos</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-section">
+                <h3>Nos hébergements</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-section">
+                <h3>Assistance</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">Centre d’aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </div>
 </body>
 
