Ajout de styles spécifiques aux cartes hebergements et mise à jour responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <img src="images/logo/Booki.png" alt="Logo Booki" class="logo">
             <nav class="nav">
                 <ul>
-                    <li><a href="#">Hébergements</a></li>
-                    <li><a href="#">Activités</a></li>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
                 </ul>
             </nav>
         </header>
@@ -88,7 +88,7 @@
             <div class="hebergements-and-populaires">
 
                  <!-- Section Hebergements -->
-                <section class="hebergements">
+                <section class="hebergements" id="hebergements">
                     <h2>Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
 
@@ -282,7 +282,7 @@
             </div>
 
              <!-- Section Activités -->
-              <section class="activities-section">
+              <section class="activities-section" id="activites">
                 <h2>Activités à Marseille</h2>
                 <div class="activities-card-content">
                     <a class="a-activities" href="#">
