Adaptation de la page en mode mbile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
  <!-- BODY -->
-<body>
+<body class="body">
     <div class="main-container">
 
 <!-- Header -->
@@ -49,6 +49,9 @@
                     </div>
                     <div class="search-button">
                         <button type="button" class="search-btn">Rechercher</button>
+                        <button type="button" class="search-btn-mobile">
+                            <i class="fa-solid fa-search"></i>
+                        </button>
                     </div>
                 </div>
                 
